@@ -79,6 +79,7 @@ span.block	{display:block;}
 .wrap_code span		{display:inline-block; vertical-align:middle;}
 .sector_code_text	{max-width:360px;}
 .sector_code		{margin-left:10px; background-color:rgba(48,57,70,0.7); padding:2px 5px; border-radius:4px; font-size:11px; color:#FFF; white-space:nowrap;}
+.sector_code.vocab_name	{background-color:rgba(22,71,140,0.7);}
 .sector_code:nth-of-type(3)	{margin-left:5px;}
 .sector_bar,
 .sector_value		{display:inline-block; vertical-align:middle;}
