@@ -10,6 +10,7 @@ Display sector vocab url
 Update sector layout and headers
 Add chunks for empty description and percantage
 Display recipient region vocab and description
+Display capital spend
 
 
 Development Portal (2020-02-06 shi)
